--- a/moonfang-ver-1/components/Navbar.css
+++ b/moonfang-ver-1/components/Navbar.css
@@ -1,15 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@700&display=swap');
+
 .navbar {
     
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border-bottom: 2px solid white;
+    font-family: 'Agdasima', sans-serif;
     
 }
 
 .n1 {
-    height: 15vh;
+    height: 12vh;
+    border-bottom: 1px solid white;
+    background-color: rgb(65, 3, 42);
+}
+
+.n2 {
+    height: 8vh;
+    background-color: rgb(52, 2, 34);
+    position: sticky;
+    top: 0px;
 }
 
 .smallnavsec {
@@ -33,5 +44,26 @@
     align-items: center;
     color: white;
     height: 50%;
+    
+}
 
+.logo {
+    cursor: pointer;
+}
+
+.logo1 {
+    height: 100%;
+    width: auto;
+    padding-left: 1em;
+} 
+
+.logo2 {
+    width: 100%;
+    
+} 
+
+.forumicon {
+    height: 80%;
+    width: auto;
+    padding-left: 1em;
 }
