--- a/moonfang-ver-1/components/Sidebar.css
+++ b/moonfang-ver-1/components/Sidebar.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@700&display=swap');
+
 .sidebar {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
     width: 5%;
     height: 100vh;
-    background-color: rgb(52, 2, 34);
-    
+    background-color: rgb(39, 1, 26);
+    font-family: 'Agdasima', sans-serif;
     position: fixed;
     top: 0px;
     transition: 0.3s;
@@ -13,25 +15,79 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border-right: 1px solid white;
+    
     
 
 }
 
+.sidebar2 {
+    
+    width: 15%;
+    height: 100vh;
+    background-color: rgb(39, 1, 26);
+    font-family: 'Agdasima', sans-serif;
+    position: fixed;
+    top: 0px;
+    transition: 0.3s;
+    z-index: 1;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    
+    
+
+}
+
+.logoSection {
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
+    
+}
+
 .sidebarsection {
-    height: 100%;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
 
+.sidebarsection:before {
+    content: "";
+    align-self: center;
+    
+    width: 70%;
+    
+    border-bottom: 1px solid white;
+    
+}
+
+.sidebarsection:after {
+    content: "";
+    align-self: center;
+    
+    width: 70%;
+    
+    border-bottom: 1px solid white;
+    
+}
+
 .sidebarsection a {
+    
+    height: 100%;
+    width: 100%;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .sideBarCloseBtn {
-    visibility: hidden;
+    
     width: 10%;
     display: flex;
     align-self: flex-end;
@@ -40,6 +96,58 @@
     border-left: 1px solid white;
     border-bottom: 1px solid white;
     color: white;
-    
+    cursor: pointer;
     transition: 0.2s;
+    font-weight: bold;
+}
+
+.sideBarCloseBtn:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.sideBarOpenBtn {
+    
+    width: 35%;
+    display: flex;
+    align-self: flex-end;
+    justify-content: center;
+    align-items: center;
+    
+    color: white;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.sideBarOpenBtn:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.menuIcon {
+    width: 100%;
+    height: auto;
+    
+}
+
+.logo {
+    cursor: pointer;
+    width: 100%;
+    
+}
+
+.sidelogo {
+    padding-top: 2em;
+}
+
+.sidebaricon {
+    width: 50%;
+    height: auto;
+}
+
+
+.sidelink:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.sideFooter {
+    height: 20vh;
 }
